--- a/package.json
+++ b/package.json
@@ -4,18 +4,84 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
+    "start:clear": "expo start --clear",
+    "start:tunnel": "expo start --tunnel",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "android:device": "expo start --android --device",
+    "ios:device": "expo start --ios --device",
+    "android:emulator": "expo start --android",
+    "ios:simulator": "expo start --ios",
+    "build:android:debug": "eas build --platform android --profile debug",
+    "build:ios:debug": "eas build --platform ios --profile debug",
+    "build:android:release": "eas build --platform android --profile production",
+    "build:ios:release": "eas build --platform ios --profile production",
+    "build:all:debug": "eas build --platform all --profile debug",
+    "build:all:release": "eas build --platform all --profile production",
+    "prebuild": "expo prebuild",
+    "prebuild:clean": "expo prebuild --clean",
+    "run:android": "expo run:android",
+    "run:ios": "expo run:ios",
+    "run:android:debug": "expo run:android --variant debug",
+    "run:ios:debug": "expo run:ios --configuration Debug",
+    "install:android": "adb install android/app/build/outputs/apk/debug/app-debug.apk",
+    "install:ios": "xcrun simctl install booted ios/build/Build/Products/Debug-iphonesimulator/QAfeteria.app",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
+    "type-check": "tsc --noEmit",
+    "doctor": "expo doctor",
+    "upgrade": "expo upgrade"
   },
   "dependencies": {
     "expo": "~53.0.12",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
-    "react-native": "0.79.4"
+    "react-native": "0.79.4",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
+    "react-native-screens": "~4.3.0",
+    "react-native-safe-area-context": "~5.1.0",
+    "react-native-gesture-handler": "~2.22.0",
+    "react-native-reanimated": "~3.15.0",
+    "expo-build-properties": "~0.14.6",
+    "react-dom": "19.0.0",
+    "react-native-web": "^0.20.0",
+    "@expo/metro-runtime": "~5.0.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "~19.0.0",
+    "@types/react-native": "^0.73.0",
+    "typescript": "^5.3.0",
+    "jest": "^29.7.0",
+    "@testing-library/react-native": "^12.5.0",
+    "eslint": "^8.57.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint-plugin-react": "^7.34.0",
+    "eslint-plugin-react-native": "^4.1.0"
   },
-  "private": true
+  "private": true,
+  "keywords": [
+    "react-native",
+    "expo",
+    "typescript",
+    "atomic-design",
+    "accessibility",
+    "automation",
+    "appium",
+    "espresso",
+    "xcuitest"
+  ],
+  "description": "React Native app built with Atomic Design, TypeScript, and accessibility-first approach for test automation",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/seu-usuario/qafeteria.git"
+  },
+  "author": "Vitor Moura",
+  "license": "MIT"
 }
